--- a/src/content/styles/cofrades.scss
+++ b/src/content/styles/cofrades.scss
@@ -69,4 +69,10 @@
     padding-top: 5px;
     color: rgb(244,67,54);
   }
+
+  .baja{
+    md-input-container:not(.md-input-invalid).md-input-has-value label{
+      color: rgb(244,67,54);
+    }
+  }
 }
