--- a/src/app/costaleros/addModify/costaleroAddModify.html
+++ b/src/app/costaleros/addModify/costaleroAddModify.html
@@ -70,7 +70,7 @@
           </div>
           <div flex="50" layout="row" layout-align="start start">
             <md-input-container class="md-icon-float" flex>
-              <label>Talla</label>
+              <label>Talla (m.)</label>
               <md-icon md-font-library="material-icons">accessibility</md-icon>
               <input name="talla" ng-model="vm.costalero.talla" type="number" step="0.01">
             </md-input-container>
