Nuevas operaciones CRUD para registros Direc.

--- a/src/app/commons/directives/aspirantes/list/aspirantes.directive.html
+++ b/src/app/commons/directives/aspirantes/list/aspirantes.directive.html
@@ -3,7 +3,7 @@
     <md-input-container class="md-icon-float">
       <label>Buscar</label>
       <md-icon md-font-library="material-icons">search</md-icon>
-      <input type={{vm.typeInput}} ng-model="vm.buscar" type="text">
+      <input ng-model="vm.buscar" type="text">
     </md-input-container>
   </div>
 
