Fixing bug de etiquetas md-list

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -58,7 +58,7 @@
               <md-icon md-font-library="material-icons">cloud</md-icon>
               <p>Configuración</p>
             </md-list-item>
-          <md-list>
+          </md-list>
 
         </md-sidenav>
         
