Nuevas funcionalidades CRUD para sectores

--- a/src/app/costaleros/addModify/costaleroAddModify.html
+++ b/src/app/costaleros/addModify/costaleroAddModify.html
@@ -23,7 +23,7 @@
         <div layout="row" id="toastBounds"></div>
         <h4><md-icon md-font-library="material-icons">face</md-icon> Costalero</h4>
         <div layout layout-sm="column">
-          <md-autocomplete required
+          <md-autocomplete required flex
             md-input-name="cofrade"
             md-no-cache="true"
             md-search-text="vm.searchText"
