Nuevas funcionalidades CRUD para Pap.Sit

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -50,8 +50,8 @@
               <md-icon md-font-library="material-icons">explore</md-icon>
               <p>Sectores</p>
             </md-list-item>
-            <md-list-item ng-click="app.navigateTo('cofrades', 'menuIzquierdo', $event)">
-              <md-icon md-font-library="material-icons">cloud</md-icon>
+            <md-list-item ng-click="app.navigateTo('papeletasSitios', 'menuIzquierdo', $event)">
+              <md-icon md-font-library="material-icons">receipt</md-icon>
               <p>Papeletas de Sitio</p>
             </md-list-item>
             <md-list-item ng-click="app.navigateTo('cofrades', 'menuIzquierdo', $event)">
