Operacion CRUD para el nuevo modelo de datos Num.Lot.

--- a/src/app/gastosBancarios/modify/gastoBancarioModify.html
+++ b/src/app/gastosBancarios/modify/gastoBancarioModify.html
@@ -9,7 +9,7 @@
             </span>
           </h4>
           <span flex></span>
-          <md-button class="md-icon-button" aria-label="Detalles Cofrade" ng-click="vm.guardar(gastoBancarioForm.$valid)"  type="submit">
+          <md-button class="md-icon-button" aria-label="Guardar gastos" ng-click="vm.guardar(gastoBancarioForm.$valid)"  type="submit">
             <md-icon md-font-library="material-icons">save</md-icon>
           </md-button>
         </div>
