--- a/src/content/styles/numerosLoteria.scss
+++ b/src/content/styles/numerosLoteria.scss
@@ -1,9 +1,9 @@
-.gastosBancarios{
+.numerosLoteria{
 
   md-input-container {
     padding-bottom: 16px;
   }
-
+  
   input[type="number"]{
     text-align: right;
   }
