--- a/src/app/index.html
+++ b/src/app/index.html
@@ -56,7 +56,7 @@
             </md-list-item>
             <md-list-item ng-click="app.navigateTo('numerosLoteria', 'menuIzquierdo', $event)">
               <md-icon md-font-library="material-icons">local_atm</md-icon>
-              <p>Números de lotería</p>
+              <p>Números de Lotería</p>
             </md-list-item>
             <md-list-item ng-click="app.navigateTo('gastosBancarios', 'menuIzquierdo', $event)">
               <md-icon md-font-library="material-icons">account_balance</md-icon>
