--- a/src/app/papeletasSitios/addModify/papeletaSitioAddModify.html
+++ b/src/app/papeletasSitios/addModify/papeletaSitioAddModify.html
@@ -1,7 +1,7 @@
 <div layout="row" layout-align="center center">
   <div flex flex-gt-md="80" class="md-primary md-whiteframe-z2 listaPapeletasSitios">
     <form name="papeletaSitioForm" novalidate>
-      <md-toolbar>
+      <md-toolbar class="md-primary md-hue-1">
         <div class="md-toolbar-tools">
           <md-button class="md-icon-button" aria-label="Detalles PapeletaSitio" ng-click="vm.backState()">
             <md-icon md-font-library="material-icons">arrow_back</md-icon>
