--- a/src/app/cofrades/detail/cofradeDetalle.html
+++ b/src/app/cofrades/detail/cofradeDetalle.html
@@ -1,6 +1,6 @@
 <div layout="row" layout-align="center center">
   <div flex flex-gt-md="80" class="md-primary md-whiteframe-z2 listaCofrades">
-    <md-toolbar>
+    <md-toolbar class="md-primary md-hue-1">
       <div class="md-toolbar-tools">
         <md-button class="md-icon-button" aria-label="Detalles Cofrade" ui-sref="cofrades">
           <md-icon md-font-library="material-icons">arrow_back</md-icon>
