--- a/src/app/cofrades/detail/cofradeDetalle.html
+++ b/src/app/cofrades/detail/cofradeDetalle.html
@@ -227,12 +227,12 @@
           <h1>Datos Loteria</h1>
           <div layout layout-sm="column">
             <md-input-container class="md-icon-float" flex="50">
-              <label>Número de Navidad 1</label>
+              <label>Número de Navidad {{vm.numerosLoteria.navidad1.numero}}</label>
               <md-icon md-font-library="material-icons">local_play</md-icon>
               <input ng-model="vm.cofrade.datosLoteria.numeroNavidad1" type="number" readonly>
             </md-input-container>
             <md-input-container class="md-icon-float" flex="50">
-              <label>Número de Navidad 2</label>
+              <label>Número de Navidad {{vm.numerosLoteria.navidad2.numero}}</label>
               <md-icon md-font-library="material-icons"></md-icon>
                <input ng-model="vm.cofrade.datosLoteria.numeroNavidad2" type="number" readonly>
             </md-input-container>
@@ -240,12 +240,12 @@
 
           <div layout layout-sm="column">
             <md-input-container class="md-icon-float" flex="50">
-              <label>Número del Niño 1</label>
+              <label>Número del Niño {{vm.numerosLoteria.ninio1.numero}}</label>
               <md-icon md-font-library="material-icons">local_play</md-icon>
               <input ng-model="vm.cofrade.datosLoteria.numeroNinio1" type="number" readonly>
             </md-input-container>
             <md-input-container class="md-icon-float" flex="50">
-              <label>Número del Niño 2</label>
+              <label>Número del Niño {{vm.numerosLoteria.ninio2.numero}}</label>
               <md-icon md-font-library="material-icons"></md-icon>
                <input ng-model="vm.cofrade.datosLoteria.numeroNinio2" type="number" readonly>
             </md-input-container>
